# blackwell-moe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: BENCH_cache.md  BENCH_v0.1.md  BENCH_v0.2.md  BENCH_v0.3.md  DESIGN.md  PERF.md
scripts/: bench_cache.py  bench_fastcache.py  bench_matrix.py  deploy_to_gpu.sh  download_mixtral.py  eval_perplexity.py  extract_experts_to_disk.py  profile_v3.py  test_streaming.py  verify_all.py  verify_int4.py  verify_int4_group.py  verify_v3.py
src/blackwell_moe/: __init__.py
src/blackwell_moe/bench/: cli.py
src/blackwell_moe/kernels/: fp8_moe.py  fp8_moe_cached.py  fp8_moe_fastcache.py  fp8_moe_small_e.py  fp8_moe_torch.py  fp8_moe_v2.py  fp8_moe_v3.py  fp8_moe_v4.py  fp8_quant.py  fused_swiglu.py  grouped_fp8.py  grouped_fp8_gateup.py  grouped_fp8_small_e.py  grouped_int4.py  grouped_int4_group.py  int4_group.py  int4_moe.py  int4_moe_group.py  int4_quant.py  permute.py  reference.py  routing.py  scatter.py  segment_ops.py  swiglu_fused.py  swiglu_online.py
src/blackwell_moe/runtime/: cli.py  cpu_offload.py  deepseek_patch.py  deepseek_streaming.py  disk_expert_pool.py  expert_cache.py  fast_expert_cache.py  loader.py  mixtral_cli.py  mixtral_loader.py  mixtral_patch.py  qwen_loader.py  qwen_patch.py  shared_expert_fp8.py  streaming_cli.py  streaming_moe.py
tests/: conftest.py  test_correctness.py  test_expert_cache.py  test_fp8_quant.py  test_int4_quant.py  test_router.py  test_scatter.py  test_segment_ops.py
