[project]
name = "blackwell-moe"
version = "0.1.0"
description = "FP8 MoE inference kernels optimized for NVIDIA Blackwell (sm_120, RTX 50xx)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Morgann Riu" }]
dependencies = [
    "torch>=2.6.0",
    "triton>=3.2.0",
    "transformers>=4.46",
    "safetensors>=0.4.5",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
fp8 = ["transformer-engine>=1.13"]
bench = ["matplotlib>=3.9", "pandas>=2.2", "vllm>=0.7; sys_platform == 'linux'"]
dev = ["pytest>=8", "ruff>=0.8", "mypy>=1.11"]

[project.scripts]
bwmoe-bench = "blackwell_moe.bench.cli:main"
bwmoe-run = "blackwell_moe.runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackwell_moe"]

[tool.ruff]
line-length = 100
target-version = "py311"
